--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@material-ui/core": "^4.11.3",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "prettier": "2.2.1"
   },
   "repository": {
