--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@material-ui/core": "^4.11.3",
     "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "prettier": "2.2.1"
   },
   "repository": {
