--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-react-svg": "^3.0.0",
     "prettier": "2.2.1"
