--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "gatsby": "^3.1.1",
+    "gatsby-source-microcms": "^1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
